# python-project-50

./: Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml  python-project-50.yml
gendiff/scripts/: file1.json  gendiff.py
tests/: test_gendiff.py
