[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Stepan Kozlov <pewspoon.info@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
hexlet-python-package = "python-project-50.scripts.gendiff:main"

